# Openai-Agents-SDK

./: README.md
.devcontainer/: devcontainer.json
Bank_agent/: .dockerignore  .env  Dockerfile  README.md  agent.py  pyproject.toml
agent_pattern/: .env  main.py
chainlit_agent/: agent.py
deterministic_pattern/: main.py
guradraill_agent/: .env  main.py  pyproject.toml
hooks/: run_hooks.py
llm_as_judge/: main.py
mcp/custom-server/: .env  agent.py  pyproject.toml  server.py
mcp/github-server/: main.py  pyproject.toml
parallel_pattern/: main.py
practice/: main.py  models.py  pyproject.toml
profile_agent/: .gitignore  chart_agent.py  main.py  profile_agent.py  pyproject.toml
profile_agent/.streamlit/: config.toml
profile_agent/utils/: chart.py  extract_text.py  formatted_pdf.py
